--- a/wp-content/themes/snf/styles/css/cpt/products.css
+++ b/wp-content/themes/snf/styles/css/cpt/products.css
@@ -70,18 +70,18 @@
     position:relative;
 }
 .products-grouping .card-footer .panel-title{
-    margin: 0;
-}
+    margin: 0px 0;
+    /* padding: 10px 0; */}
 .products-grouping .card-footer .panel-title.prod-cat{
     border-bottom:solid 1px #cecece;
-}
+    padding: 10px 0;}
 .products-grouping  .product-tag .lead.depth_1{
     font-weight:600;
 }
 .products-grouping .card-footer .panel-title.prod-cat a{
     color:#0082CA;
     font-weight:700;
-}
+    width: 100%;display: block;}
 .products-grouping .card-footer .panel-title a{
     text-align:left;
 }
@@ -97,4 +97,29 @@
     display:flex;
     justify-content:center;
     align-items:center;
+}
+.market_background{
+	height: 200px;
+	background-position: center;
+	background-size: cover;
+		position: relative;
+display: block;}
+.product_market_selection.overlay{
+	position: absolute;
+	background-color: rgba(0,0,0,.35);
+	height: 100%;
+	width:100%;
+left: 0;top: 0;z-index: 3;display: block;
+}
+.market_background .card-body{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	z-index: 6;
+
+height: 100%;width: 100%;}
+.market_background .card-body h3{
+	color:#fff;
+		z-index: 6;
 }
