--- a/wp-content/themes/snf/styles/css/cpt/timeline.css
+++ b/wp-content/themes/snf/styles/css/cpt/timeline.css
@@ -1,4 +1,4 @@
-.title {
+.timeline-title {
     font-size: 38px;
     font-style: italic;
     font-weight: 800;
@@ -107,7 +107,7 @@
 }
 .timeline .swiper-pagination {
     right: 15% !important;
-    height: 100%;
+    /* overflow-y: scroll; */height: 100%;
     display: none;
     flex-direction: column;
     justify-content: center;
@@ -115,13 +115,19 @@
     font-weight: 300;
     font-size: 18px;
     z-index: 1;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll;}
+
+.timeline .swiper-pagination::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
 .timeline .swiper-pagination::before {
     content: "";
     position: absolute;
     left: -30px;
     top: 0;
-    height: 100%;
+    /* height: 100%; */
     width: 1px;
     background-color: rgba(255, 255, 255, .2);
 }
@@ -134,6 +140,9 @@
     color: #fff;
     margin: 15px 0 !important;
     position: relative;
+}
+.timeline span.swiper-pagination-bullet-active{
+    font-weight:800;
 }
 .timeline .swiper-pagination-bullet::before {
     content: "";
@@ -206,7 +215,7 @@
     .timeline .swiper-button-prev {
         top: 15%;
         left: auto;
-        right: 15%;
+        right: 5%;
         transform: rotate(90deg) translate(0, 10px);
     }
     .timeline .swiper-button-prev:hover {
@@ -215,7 +224,7 @@
     .timeline .swiper-button-next {
         top: auto;
         bottom: 15%;
-        right: 15%;
+        right: 5%;
         transform: rotate(90deg) translate(0, 10px);
     }
     .timeline .swiper-button-next:hover {
