--- a/wp-content/themes/snf/styles/css/markets/oil-gas.css
+++ b/wp-content/themes/snf/styles/css/markets/oil-gas.css
@@ -32,12 +32,12 @@ IX.)
     /* border-radius: 25px; */
 }
 .carousel-control-prev, .carousel-control-next{
-    position: relative;
+    /* position: relative; */
     /* padding: 0 15px; */
-    color: rgb(249,176,0);
-    background-color: rgb(249,176,0);
-    border: none;
-    display: inline-block;
+    /* color: rgb(249,176,0); */
+    /* background-color: rgb(249,176,0); */
+    /* border: none; */
+    /* display: inline-block; */
     /* width: 100%; */
 }
 .carousel-control-next:focus, .carousel-control-next:hover, .carousel-control-prev:focus, .carousel-control-prev:hover{
