--- a/wp-content/themes/snf/styles/css/markets/markets-default.css
+++ b/wp-content/themes/snf/styles/css/markets/markets-default.css
@@ -238,6 +238,9 @@ SDG Sidebar
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
+.photos figure{
+    position:relative;
+}
 /*===================================================
 Cards
 ======================================================*/
