--- a/wp-content/themes/snf/style.css
+++ b/wp-content/themes/snf/style.css
@@ -76,7 +76,7 @@ IX.) News
 @import "styles/css/markets/construction.css";
 @import "styles/css/markets/equipment.css";
 @import "styles/css/markets/mining.css";
-
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /*===================================================
     TEMPLATES
